--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ p{
     width: 100%;
     height: 90vh;
     position: relative;
-    background-image: url("/images/background.jpg")   ;
+    background-image: url("https://i.ibb.co/vXqDmnh/background.jpg")   ;
   
   
   
